; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_curve25519.donna.c_fmul.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_curve25519.donna.c_fmul.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*)* @fmul to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fmul(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca [19 x i32], align 16
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = getelementptr inbounds [19 x i32], [19 x i32]* %7, i64 0, i64 0
  %9 = load i32*, i32** %5, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = call i32 @fproduct(i32* %8, i32* %9, i32* %10)
  %12 = getelementptr inbounds [19 x i32], [19 x i32]* %7, i64 0, i64 0
  %13 = call i32 @freduce_degree(i32* %12)
  %14 = getelementptr inbounds [19 x i32], [19 x i32]* %7, i64 0, i64 0
  %15 = call i32 @freduce_coefficients(i32* %14)
  %16 = load i32*, i32** %4, align 8
  %17 = getelementptr inbounds [19 x i32], [19 x i32]* %7, i64 0, i64 0
  %18 = call i32 @memcpy(i32* %16, i32* %17, i32 40)
  ret void
}

declare dso_local i32 @fproduct(i32*, i32*, i32*) #1

declare dso_local i32 @freduce_degree(i32*) #1

declare dso_local i32 @freduce_coefficients(i32*) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
